--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,11 @@ h2{
 .logo:hover{
   transform: scale(1.1);
 }
+@media (max-width:1114px) {
+  .column6{
+    font-size: 15px !important;
+  }
+}
 .hello{
   width: 70px !important;
 margin-top: -8px;
